# 3dtiles

./: .dockerignore  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Cargo.toml  Dockerfile  README.md  README_EN.md  README_ZH.md  appveyor.yml  build-dockerfile.sh  build.rs  compile_commands.json  gdal_i.lib  index.html  matrix.xlsx  todo.txt  vcpkg-configuration.json  vcpkg.json
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build.yml  linux.yml  macOS-arm64.yml  macOS-intel.yml  release.yml  rust.yml  windows.yml
.trae/rules/: project_rules.md
.trae/skills/3dtiles-regression-validation/: COMPLETE_SOLUTION.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  SKILL.md  generate_baseline.sh  gltf_comparator.py  regression_validator_v2.py  requirements.txt  run_regression_test.sh  run_tests.py  test_config.json  test_tiles_comparison.py  tiles_comparator.py  tiles_validator.py
.trae/skills/3dtiles-regression-validation/3dtiles_regression/: __init__.py  __main__.py  cli.py  config.py  converter.py  reporter.py  runner.py
.trae/skills/coordinate-transform/: SKILL.md
data/test/: test.osgb
docs/: COORDINATE_SYSTEM_API.md
lib/: OpenThreads.lib  libOpenThreads.so.21  libOpenThreads.so.3.3.1  libosg.so.130  libosg.so.202  libosgAnimation.so.202  libosgAnimation.so.3.7.0  libosgDB.so.130  libosgDB.so.202  libosgDB.so.3.7.0  libosgFX.so.202  libosgFX.so.3.7.0  libosgGA.so.202  libosgGA.so.3.7.0  libosgManipulator.so.202  libosgManipulator.so.3.7.0  libosgParticle.so.202  libosgParticle.so.3.7.0  libosgPresentation.so.202  libosgPresentation.so.3.7.0  libosgShadow.so.202  libosgShadow.so.3.7.0  libosgSim.so.202  libosgSim.so.3.7.0  libosgTerrain.so.202  libosgTerrain.so.3.7.0  libosgText.so.202  libosgText.so.3.7.0  libosgUI.so.202  libosgUI.so.3.7.0  libosgUtil.so.130  libosgUtil.so.202  libosgUtil.so.3.7.0  libosgViewer.so.202  libosgViewer.so.3.7.0  libosgVolume.so.202  libosgVolume.so.3.7.0  libosgWidget.so.202  libosgWidget.so.3.7.0  osg.lib  (+23 more)
src/: FBXPipeline.cpp  FBXPipeline.h  GeoTransform.cpp  GeoTransform.h  attribute_storage.cpp  attribute_storage.h  common.rs  coordinate_system.cpp  coordinate_system.h  coordinate_transformer.cpp  coordinate_transformer.h  decompress.cpp  dxt_img.cpp  dxt_img.h  earcut.hpp  extern.h  fbx.cpp  fbx.h  fbx.rs  fun_c.rs  json.hpp  lod_pipeline.cpp  lod_pipeline.h  main.rs  make_gltf.cpp  mesh_processor.cpp  mesh_processor.h  osg_fix.h  osgb.rs  osgb23dtile.cpp  shape.h  shape.rs  shp23dtile.cpp  shp2obj.cpp  tileset.cpp  tiny_gltf.h
src/Eigen/src/Core/: PartialReduxEvaluator.h
src/core/coordinate/: coordinate_converter.cpp  coordinate_converter.h  coordinate_system.cpp  coordinate_system.h  enu_context.cpp  enu_context.h  geo_transform.cpp  geo_transform.h  transform_builder.cpp  transform_builder.h
src/gdal/: cpl_aws.h  cpl_conv.h  cpl_http.h  cpl_list.h  cpl_multiproc.h  cpl_port.h  cpl_quad_tree.h  cpl_sha256.h  cpl_string.h  cpl_time.h  cpl_vsi.h  cplkeywordparser.h  gdal_frmts.h  gdal_pam.h  gdal_priv.h  gdal_rat.h  gdal_vrt.h  gdaljp2metadata.h  gdalwarpkernel_opencl.h  ogr_feature.h  ogr_p.h  ograpispy.h  ogrgeomediageometry.h  osr_cs_wkt.h  rawdataset.h
src/glm/: ext.hpp  glm.cppm
src/glm/detail/: func_common.inl  func_common_simd.inl  func_integer.inl  glm.cpp  qualifier.hpp  setup.hpp  type_quat_simd.inl
src/glm/ext/: quaternion_exponential.inl  quaternion_geometric.hpp  quaternion_geometric.inl  quaternion_transform.inl  scalar_common.hpp  scalar_common.inl
src/glm/gtc/: packing.inl  type_aligned.hpp
src/glm/gtx/: color_space.inl  compatibility.hpp  compatibility.inl  component_wise.inl  io.inl  iteration.hpp  iteration.inl
src/glm/simd/: neon.h
src/osg/OpenThreads/: Config  Version
src/osg/osg/: Config  GL  Version
src/osg/osgQOpenGL/: CullVisitorEx  Export  GraphicsWindowEx  OSGRenderer  RenderStageEx  StateEx  osgQOpenGLWidget  osgQOpenGLWindow
src/osg/osgQt/: GraphicsWindowQt  QFontImplementation  QWidgetImage
src/osg/osgUI/: Label
tests/: CMakeLists.txt
tests/e2e/3dtiles-viewer/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
tests/e2e/3dtiles-viewer/src/: App.vue  main.ts  style.css
tests/e2e/3dtiles-viewer/src/components/: ProvideViewer.vue
tests/e2e/3dtiles-viewer/src/components/3d-viewer/: Viewer3D.vue  index.ts
tests/e2e/3dtiles-viewer/src/components/common/: CollapsiblePanel.vue  DraggablePanel.vue  LoadingSpinner.vue  ToggleButton.vue
tests/e2e/3dtiles-viewer/src/components/controls/: CameraControls.vue  TilesetCard.vue  TilesetLoader.vue  ViewerToolbar.vue
tests/e2e/3dtiles-viewer/src/components/inspector/: DebugControls.vue  InspectorPanel.vue  PerformanceMetrics.vue  TilesetInfo.vue
tests/e2e/3dtiles-viewer/src/components/properties/: PropertiesPanel.vue  PropertyTable.vue
tests/e2e/3dtiles-viewer/src/components/status-bar/: CameraInfo.vue  CoordinateDisplay.vue  StatusBar.vue
tests/e2e/3dtiles-viewer/src/composables/: useCamera.ts  useDraggable.ts  useFeaturePicking.ts  useGeoJSON.ts  usePerformance.ts  useTileset.ts  useTilesetManager.ts  useViewer3D.ts
tests/e2e/3dtiles-viewer/src/config/: tilesets.config.ts
tests/e2e/3dtiles-viewer/src/stores/: inspector.ts  properties.ts  tileset.ts  viewer.ts
tests/e2e/3dtiles-viewer/src/types/: global.d.ts  index.ts  inspector.d.ts  tileset.d.ts  viewer3d.d.ts
tests/e2e/3dtiles-viewer/src/utils/: coordinate.ts  format.ts  performance.ts
tests/unit/: CMakeLists.txt  test_coordinate_converter.cpp  test_enu_context.cpp  test_transform_builder.cpp
tests/utils/: test_helpers.cpp  test_helpers.h
vs/: vs.sln
vs/TileMaker/: Form1.Designer.cs  Form1.cs  Form1.resx  Program.cs  TileMaker.csproj
vs/TileMaker/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
vs/tile/: tile.vcxproj  tile.vcxproj.filters
vs/tile/src/: extern.cpp  osgb.h  osgb23dtile.cpp  shp23dtile.cpp  tileset.cpp
vs/tile/src/gdal/: cpl_atomic_ops.h  cpl_csv.h  cpl_error.h  cpl_hash_set.h  gdal.h  (+38 more)
vs/vs/: dll.cpp  vs.vcxproj  vs.vcxproj.filters
(+6 files in other folders)
