[package]
name = "3dtile"
version = "0.1.0"
authors = ["fanzhenhua <fanzhenhua@superengine.com.cn>"]

[dependencies]
libc = "0.2"
clap = "2.0"
chrono = "0.4"
rayon = "1.0"

# serilaze
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
serde-xml-rs = "0.2.1"

# log
log = "0.4"
env_logger = "0.5"
#

byteorder = "1.2"
[build-dependencies]
cc = "1.0.*"