[package]
name = "_3dtile"
version = "0.1.0"
authors = ["fanzhenhua <fanzhenhua@superengine.com.cn>"]

[dependencies]
libc = "0.2"
clap = "2.0"
chrono = "0.4"
rayon = "1.0"

# serilaze
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-xml-rs = "0.4"

# log
log = "0.4"
env_logger = "0.5"
#

byteorder = "1.2"
[build-dependencies]
cmake = "0.1"
pkg-config = "0.3"